# DeepL-Translate-Unofficial

./: README.md  components.d.ts  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: publish-to-auto-release.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: cmds.rs  lib.rs  main.rs
src-tauri/src/utils/: constant.rs  mod.rs  structs.rs
src/assets/icons/: icon.icns
src/components/config/: index.vue  type.ts
src/components/icons/: alert.vue  close.vue  cog.vue  earth.vue  keyboard.vue
src/hooks/: useRegister.ts  useTray.ts
src/i18n/: index.ts  languages.ts
src/locales/: language.json
src/locales/country-language/: AR.json  BG.json  CS.json  DA.json  DE.json  EL.json  EN-GB.json  ES.json  ET.json  FI.json  FR.json  HU.json  ID.json  IT.json  JA.json  KO.json  LT.json  LV.json  NB.json  NL.json  PL.json  PT.json  RO.json  RU.json  SK.json  SL.json  SV.json  TR.json  UK.json  ZH-HANT.json  ZH.json
src/locales/languages/: AR.ts  BG.ts  CS.ts  DA.ts  DE.ts  EL.ts  EN-GB.ts  EN-US.ts  EN.ts  ES.ts  ET.ts  FI.ts  FR.ts  HU.ts  ID.ts  IT.ts  JA.ts  KO.ts  LT.ts  LV.ts  NB.ts  NL.ts  PL.ts  PT-BR.ts  PT-PT.ts  PT.ts  RO.ts  RU.ts  SK.ts  SL.ts  SV.ts  TR.ts  UK.ts  ZH-HANS.ts  ZH-HANT.ts
src/router/: index.ts
src/stores/: env.ts  settings.ts  translate.ts
src/types/: language.ts  settings.ts  translate.ts  win.ts
src/utils/: constant.ts  init.ts  public.ts  store.ts  translate.ts  webview.ts
(+4 files in other folders)
