[package]
name = "deepl-translate"
version = "0.0.1"
description = "A Tauri App"
authors = [ "you" ]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "deepl_translate_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [
  "tray-icon",
  "image-ico"
] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-store = "2"
tauri-plugin-os = "2"
tauri-plugin-log = { version = "2", features = [ "colored" ] }
log = "0.4"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
selection = "1.2.0"
mouse_position = "0.1.4"
reqwest = { version = "0.12", features = [ "json" ] }
once_cell = "1.21.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
